# Textmining-Project

./: .gitignore  README.md  download_alfred.py  pyproject.toml  text_mining.ipynb  tfidf.ipynb  traditional.ipynb
data/alfred/: tests_seen.json  tests_unseen.json  valid_seen.json  valid_unseen.json
