[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "transformers",
    "torch",
    # "torchvision",
    "sentence-transformers",
    "requests",
    "py7zr>=1.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
# torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
